<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    android:layout_marginHorizontal="20dp"
    style="@style/screen_card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_app_name"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/change_name"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:fontFamily="@font/nunitoextrabold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_logout_dialog"
            android:gravity="center"
            android:text="@string/enter_new_name_noti"
            android:fontFamily="@font/nunitobold"
            style="@style/text_color"/>

        <EditText
            android:id="@+id/inputNewName"
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rectangle_corner"
            android:backgroundTint="@color/l_gray"
            android:fontFamily="@font/nunitoregular"
            android:gravity="center"
            android:hint="@string/enter_new_name"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_logout_button"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_logout_button"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>