<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    android:layout_marginHorizontal="20dp"
    style="@style/screen_card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/del_text_app_name"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="DFIVE"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:fontFamily="@font/nunitoextrabold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_dialog"
            android:gravity="center"
            android:text="@string/send_failed_do_you_want_to_delete"
            android:textColor="@color/gray"
            android:fontFamily="@font/nunitobold"
            style="@style/text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/delete_mess_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_logout_button"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/delete_mess_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_logout_button"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>