<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_screen"
    style="@style/screen_background">
    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_backScreen"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/pink"
        android:layout_margin="@dimen/_20sdp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/display_avatar_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/btn_backScreen"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_account"
        app:civ_border_color="@color/l_purple"
        app:civ_border_width="5dp" />

    <TextView
        android:id="@+id/display_username"
        style="@style/title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_avatar_user"
        android:layout_centerInParent="true"
        android:fontFamily="@font/nunitobold"
        android:gravity="center"
        android:maxEms="8"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="Name of user"
        android:textSize="30dp"
        />



    <Button
        android:id="@+id/btn_changeName"
        style="@style/button_dark_mode"
        android:drawableStart="@drawable/ic_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rounded_bar_up"
        android:padding="16dp"
        android:text="@string/change_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_AddParticipate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_bar"
        android:padding="16dp"
        android:text="@string/add_participant"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/btn_changeName"
        style="@style/button_language_refresh_logout" />

    <Button
        android:id="@+id/btn_deleteParticipate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_bar"
        android:padding="16dp"
        android:text="@string/participants"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/btn_AddParticipate"
        style="@style/button_language_refresh_logout"/>

    <Button
        android:id="@+id/btn_leave_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_bar_bottom"
        android:padding="16dp"
        android:text="@string/leave_chat"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_delete"
        android:layout_below="@+id/btn_deleteParticipate"
        style="@style/button_language_refresh_logout"/>


</RelativeLayout>